UI fix for tokenfield overflow on invites

--- a/resources/assets/sass/_edit.scss
+++ b/resources/assets/sass/_edit.scss
@@ -152,6 +152,7 @@
     margin-bottom: 15px;
     padding: 3px 2px;
     min-height: 41px;
+    height:auto;
 
     .token-input {
         background-color: transparent;
@@ -174,19 +175,25 @@
                 background-color: $brand;
                 color: #FFF;
                 font-size: 14px;
-                padding: 2px 10px;
+                padding: 4px 10px;
                 border-bottom: 3px solid #155E67;
                 margin-left: 3px;
                 margin-right: 3px;
                 border-radius: 3px;
+                white-space: nowrap;
                 display: inline-block;
-
+                padding-right: 30px;
+                position: relative;
+                z-index: 1;
+                margin: 0 1px 1px 0;
                 .close {
-                    float: left;
+                    position: absolute;
+                    right: 6px;
+                    top: 3px;
+                    z-index: 1;
                     color: #FFF;
                     font-size: 22px;
                     font-weight: 400;
-                    margin: -1px 5px -5px -4px;
                 }
              }
     //      }
